[gd_scene load_steps=12 format=3 uid="uid://vopx7ngh5whv"]

[ext_resource type="Script" uid="uid://bw1mqnh02kuji" path="res://IngredientMenu/menu_2.gd" id="1_6aymy"]
[ext_resource type="Texture2D" uid="uid://beadigyfjwf6l" path="res://Inventory/InventorySprites/InventoryRect.png" id="2_n2tm0"]
[ext_resource type="PackedScene" uid="uid://b8m5u0iygxod5" path="res://Inventory/InvSlots.tscn" id="3_pgmpo"]
[ext_resource type="Texture2D" uid="uid://b8pajxajscifw" path="res://IngredientMenu/Ingredient_Sprite/sliced_vege.png" id="4_8js8i"]
[ext_resource type="Texture2D" uid="uid://cig2w265gwksv" path="res://IngredientMenu/Ingredient_Sprite/sliced_tomato.png" id="5_yks66"]
[ext_resource type="Texture2D" uid="uid://b6ak4so8x2rmb" path="res://IngredientMenu/Ingredient_Sprite/mayonaise.png" id="6_jha04"]
[ext_resource type="Texture2D" uid="uid://da0k050qtbxay" path="res://IngredientMenu/Ingredient_Sprite/tomato_sauce.png" id="7_262bb"]
[ext_resource type="Texture2D" uid="uid://xdmskorrna7b" path="res://IngredientMenu/Ingredient_Sprite/chili_flakes.png" id="8_2o085"]
[ext_resource type="Texture2D" uid="uid://cvbswq0p4t8a0" path="res://IngredientMenu/Ingredient_Sprite/selects.png" id="9_cuudn"]
[ext_resource type="Texture2D" uid="uid://byy1iwm5st1bl" path="res://IngredientMenu/Ingredient_Sprite/selects_clicked.png" id="10_wldcl"]
[ext_resource type="Texture2D" uid="uid://boatjmul8j8id" path="res://IngredientMenu/Ingredient_Sprite/oil.png" id="10_xeku5"]

[node name="menu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6aymy")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(130, 78)
layout_mode = 0
offset_right = 130.0
offset_bottom = 78.0
texture = ExtResource("2_n2tm0")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
offset_left = 6.0
offset_top = 5.0
offset_right = 126.0
offset_bottom = 26.0
columns = 5

[node name="InvSlots" parent="NinePatchRect/GridContainer" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 43.0
offset_bottom = 47.0
scale = Vector2(0.421684, 0.409223)
texture = ExtResource("4_8js8i")

[node name="InvSlots2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.493556, 0.504855)
texture = ExtResource("5_yks66")

[node name="InvSlots3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 39.0
offset_bottom = 42.0
scale = Vector2(0.431876, 0.442185)
texture = ExtResource("6_jha04")

[node name="InvSlots4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots4"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 41.0
scale = Vector2(0.758532, 0.477516)
texture = ExtResource("7_262bb")
expand_mode = 1

[node name="InvSlots5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer/InvSlots5"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 20.0
texture = ExtResource("8_2o085")
expand_mode = 1

[node name="vege2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 26.0
offset_right = 29.0
offset_bottom = 35.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="stomato2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 29.0
offset_top = 26.0
offset_right = 53.0
offset_bottom = 35.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="mayo2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 26.0
offset_right = 77.0
offset_bottom = 35.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="tsauce2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 77.0
offset_top = 26.0
offset_right = 101.0
offset_bottom = 35.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="bbqs2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 101.0
offset_top = 26.0
offset_right = 125.0
offset_bottom = 35.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="oil2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 59.0
offset_right = 29.0
offset_bottom = 68.0
scale = Vector2(0.9, 1.1)
texture_normal = ExtResource("9_cuudn")
texture_pressed = ExtResource("10_wldcl")

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 38.0
offset_right = 125.0
offset_bottom = 58.0
columns = 5

[node name="InvSlots6" parent="NinePatchRect/GridContainer2" instance=ExtResource("3_pgmpo")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer2/InvSlots6"]
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 19.0
texture = ExtResource("10_xeku5")
expand_mode = 1

[connection signal="pressed" from="NinePatchRect/vege2" to="." method="_on_vege_2_pressed"]
[connection signal="pressed" from="NinePatchRect/stomato2" to="." method="_on_stomato_2_pressed"]
[connection signal="pressed" from="NinePatchRect/mayo2" to="." method="_on_mayo_2_pressed"]
[connection signal="pressed" from="NinePatchRect/tsauce2" to="." method="_on_tsauce_2_pressed"]
[connection signal="pressed" from="NinePatchRect/bbqs2" to="." method="_on_bbqs_2_pressed"]
[connection signal="pressed" from="NinePatchRect/oil2" to="." method="_on_oil_2_pressed"]
